--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ urllib3==1.25.7
 pillow==8.0.1
 django-crispy-forms==1.10.0
 django-countries==7.0
+dj-database-url==0.5.0
+psycopg2-binary==2.8.6
+gunicorn==20.0.4
