--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ dj-database-url==0.5.0
 psycopg2-binary==2.8.6
 gunicorn==20.0.4
 stripe==2.55.1
+django-storages==1.11.1
+boto3==1.16.59
+botocore==1.19.59
+jmespath==0.10.0
+s3transfer==0.3.4
